Reworked the way that the pane is set up to avoid having to add margin to the element itself (which was causing cross browser issues). Now an extra element is wrapped around the content and the margin is set on that...

--- a/style/jquery.jscrollpane.css
+++ b/style/jquery.jscrollpane.css
@@ -11,9 +11,19 @@
 	position: relative;
 }
 
-.jspScrollable
+.jspPane
 {
 	position: absolute;
+}
+
+.jspPane .jspFirst
+{
+	margin-top: 0;
+}
+
+.jpsPane .jspLast
+{
+	margin-bottom: 0;
 }
 
 .jspVerticalBar
